file row added as 4

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     </p>
                 </div>
                 <div class="row g-4" style="margin-top: 30px;">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s" style="height: 300px;">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -708,7 +708,7 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -737,7 +737,7 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="margin-bottom: 30px;">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="margin-bottom: 30px;">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -767,7 +767,7 @@
 
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -775,7 +775,7 @@
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <div class="row g-1">
-                                    <div class="col-12 text-center mb-3" style="margin-top: 15px;">
+                                    <div class="col-12 text-center mb-3" style="margin-top: -15px;">
                                         <a class="d-block text-center h3 mt-3 mb-4" href="">Status Documents I</a>
                                         <p>Snapshots of our project's progress, providing status updates and milestones
                                             achieved.</p>
@@ -796,7 +796,7 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -824,7 +824,7 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="margin-bottom: 30px;">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s" style="margin-bottom: 30px;">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -856,7 +856,7 @@
 
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -896,7 +896,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="classes-item">
                             <div class="bg-light w-50 mx-auto p-3">
                                 <img style="margin-left: 10px;" class="img-fluid" src="img/pdf.png" alt="" width="150"
@@ -955,7 +955,7 @@
                             significant outcomes...</p>
                     </div>
                     <div class="row g-4">
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="classes-item">
                                 <div class="bg-light w-50 mx-auto p-3">
                                     <img style="margin-left: 10px;" class="img-fluid" src="img/ppt.png" alt=""
@@ -965,7 +965,8 @@
                                     <div class="row g-1">
                                         <div class="col-12 text-center mb-3" style="margin-top: -5px;">
                                             <a class="d-block text-center h3 mt-3 mb-4" href="">Project Proposal</a>
-                                            <p>Our research's inception, detailing goals and initial plans.</p>
+                                            <p style=" min-height:100px;">Our research's inception, detailing goals and
+                                                initial plans.</p>
                                         </div>
                                         <div class="col-12" style="margin-top: -20px;">
                                             <hr class="my-3" style="border-top: 2px solid #007bff;">
@@ -983,7 +984,7 @@
                         </div>
 
 
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="classes-item">
                                 <div class="bg-light w-50 mx-auto p-3">
                                     <img style="margin-left: 10px;" class="img-fluid" src="img/ppt.png" alt=""
@@ -1013,7 +1014,7 @@
                         </div>
 
 
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                             <div class="classes-item">
                                 <div class="bg-light w-50 mx-auto p-3">
                                     <img style="margin-left: 10px;" class="img-fluid" src="img/ppt.png" alt=""
@@ -1024,7 +1025,8 @@
                                         <div class="col-12 text-center mb-3" style="margin-top: -3px;">
                                             <a class="d-block text-center h3 mt-3 mb-4" href="#">Progress Presentation
                                                 II</a>
-                                            <p style="margin-top: -8px;">Highlights mid-project accomplishments and
+                                            <p style="margin-top: -8px;">Highlights mid-project
+                                                accomplishments and
                                                 developments.</p>
                                         </div>
                                         <div class="col-12" style="margin-top: -10px;">
@@ -1044,7 +1046,7 @@
 
 
 
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="classes-item">
                                 <div class="bg-light w-50 mx-auto p-3">
                                     <img style="margin-left: 10px;" class="img-fluid" src="img/ppt.png" alt=""
