research problem and solution

--- a/index.html
+++ b/index.html
@@ -369,26 +369,24 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/call-to-action.jpg"
-                                    style="object-fit: cover;">
+                                <!-- Replace the image with the YouTube video iframe -->
+                                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/4YBqSTWQ85A?si=sAsaAUaNbPX1Bz0q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Become A Teacher</h1>
-                                <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam
-                                    amet diam et eos.
-                                    Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore
-                                    erat amet
-                                </p>
-                                <a class="btn btn-primary py-3 px-5" href="">Get Started Now<i
-                                        class="fa fa-arrow-right ms-2"></i></a>
+                                <h1 class="mb-4">Research Problem & Solution</h1>
+                                <h5>Identified Problem</h5>
+                                <p class="mb-4">In Sri Lanka, there exists a significant lack of awareness, resources, and accessible therapy services for children with Attention-Deficit/Hyperactivity Disorder (ADHD). This dearth of resources presents a critical challenge, necessitating the development of a more reliable and effective mobile solution to identify and treat children with ADHD. Addressing this scarcity is imperative to improve the diagnosis and treatment of ADHD in Sri Lanka.</p>
+                                <h5>Proposed Solution</h5>
+                                <p class="mb-4">A specialized mobile application designed for children aged 6 to 12 in Sri Lanka aims to accurately identify ADHD symptoms. The app's child-friendly interface focuses on symptoms such as difficulty following directions, lack of concentration, memory challenges, and difficulty responding to commands. It offers tailored treatments and interventions to address these specific symptoms, providing a comprehensive support system for children with ADHD in Sri Lanka.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <!-- Call To Action End -->
 
 
