commit modifications of about us

--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/Samantha.jpg" alt="">
                             <div class="team-text">
                                 <h3>Supervisor</h3>
                                 <h6>Dr.Samantha Rajapaksha</h6>
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/vindya.jpg" alt="">
                             <div class="team-text">
                                 <h3>Co-Supervisor</h3>
                                 <h6>Vindhya Kalapuge</h6>
@@ -209,7 +209,7 @@
 
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/team-1.jpg" alt="">
                             <div class="team-text">
                                 <h3>External-Supervisor</h3>
                                 <h6>Dr.Samudra Gallale</h6>
@@ -224,9 +224,9 @@
                     </div>
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s" style="margin-top: 100px;">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/isuru.jpg" alt="">
                             <div class="team-text">
                                 <h3>Group Leader</h3>
                                 <h6> R.M.I.S.Kumarasingha</h6>
@@ -244,9 +244,9 @@
 
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.12s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.12s" style="margin-top: 100px;">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/Chathuranga.jpg" alt="">
                             <div class="team-text">
                                 <h3>Group Member</h3>
                                 <h6>D.M.C.L.B.Dissanayake</h6>
@@ -264,9 +264,11 @@
 
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.15s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.15s" style="margin-top: 100px;">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/ranabunga.jpg" alt="">
+
+
                             <div class="team-text">
                                 <h3>Group Member</h3>
                                 <h6> K.M.M.Y.S.Ranathunga</h6>
@@ -284,9 +286,9 @@
 
 
 
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.18s">
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.18s" style="margin-top: 100px;">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-75" style="height: 450px;" src="img/sandali.png" alt="">
                             <div class="team-text">
                                 <h3>Group Member</h3>
                                 <h6> P.S.R.Pathirathne  </h6>
