--- a/index.html
+++ b/index.html
@@ -984,10 +984,9 @@
                                     <div class="col-12 text-center mb-3" style="margin-top: 15px;">
                                         <a class="d-block text-center h3 mt-3 mb-4" href="">Research Paper</a>
                                         <p>A detailed academic publication summarizing our study's key findings and
-                                            methodologies.</p>
-                                        <p style="color: red;">Yet to be submitted, link will be updated soon!</p>
+                                            methodologies.</p>                    
                                     </div>
-                                    <div class="col-12" style="margin-top: -40px;">
+                                    <div class="col-12" style="margin-top: -10px;">
                                         <hr class="my-3" style="border-top: 2px solid #007bff;">
                                     </div>
                                     <div class="col-12 text-center mb-3">
@@ -996,6 +995,7 @@
                                             <a href="https://drive.google.com/drive/folders/1gB1hImqYaya9HQYfYTfiHG1LV_rHbnTr?usp=sharing"
                                                 style="text-decoration: none; color: white;">Download</a>
                                         </button>
+                                        <br /><br />
                                     </div>
                                 </div>
                             </div>
@@ -1057,9 +1057,8 @@
                                         <a class="d-block text-center h3 mt-3 mb-4" href="">Poster</a>
                                         <p style="margin-left: 15px;">A concise visual summary of our research findings,
                                             perfect for quick insights.</p>
-                                        <p style="color: red;">Yet to be submitted, link will be updated soon!</p>
                                     </div>
-                                    <div class="col-12" style="margin-top: -30px;">
+                                    <div class="col-12" style="margin-top: 10px;">
                                         <hr class="my-3" style="border-top: 2px solid #007bff;">
                                     </div>
                                     <div class="col-12 text-center mb-3">
@@ -1068,6 +1067,7 @@
                                             <a href="https://drive.google.com/drive/folders/1VLnrORlhBJ_aE8KXhqbHqygsMu-gmv1D?usp=sharing"
                                                 style="text-decoration: none; color: white;">Download</a>
                                         </button>
+                                        <br /><br />
                                     </div>
                                 </div>
                             </div>
@@ -1421,14 +1421,10 @@
                 </div>
                 <!-- Team End -->
 
-
-
-
-
                 <!-- Footer Start -->
                 <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="container py-5">
-                        <div class="row g-5">
+                        <div class="row g-5" style="margin-left: 200px;">
                             <div class="col-lg-3 col-md-6">
                                 <h3 class="text-white mb-4">Get In Touch</h3>
                                 <!-- <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p> -->
@@ -1480,28 +1476,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6">
-                                <h3 class="text-white mb-4">Newsletter</h3>
-                                <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                                <div class="position-relative mx-auto" style="max-width: 400px;">
-                                    <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
-                                        placeholder="Your email">
-                                    <button type="button"
-                                        class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <div class="container">
                         <div class="copyright">
                             <div class="row">
-                                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
-                                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                                    <br>Distributed By: <a class="border-bottom" href="https://themewagon.com"
-                                        target="_blank">ThemeWagon</a>
+                                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">                                
                                 </div>
                                 <div class="col-md-6 text-center text-md-end">
                                     <div class="footer-menu">
