--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
             font-size: 60px;
             color: orange;
         }
+        .icon1 {
+            font-size: 60px;
+            color: rgb(255, 81, 0);
+        }
+        .icon2 {
+            font-size: 60px;
+            color: rgb(14, 95, 50);
+        }
+        .icon3 {
+            font-size: 60px;
+            color: rgb(244, 207, 23);
+        }
+        .icon4 {
+            font-size: 60px;
+            color: rgb(0, 195, 255);
+        }
 
         /* Styles for the description */
         .description {
@@ -89,7 +105,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 text-primary"><i class="fa fa-book-reader me-3"></i>ADHD</h1>
+                <h1 class="m-0 text-primary"><i class="fa fa-book-reader me-3"></i>PLAY ME</h1>
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -187,9 +203,7 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-primary">
                                 <span class="bg-primary"></span>
-                                <i class="fa fa-regular-alt fa-palette fa-3x  text-primary"></i>
-                                <!-- <i class="fa fa-car-alt fa-3x text-primary"></i> -->
-
+                                <div class="icon1"><i class="fas fa-brain"></i></div>
                                 <span class="bg-primary"></span>
                             </div>
                             <div class="facility-text bg-primary">
@@ -202,8 +216,7 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-success">
                                 <span class="bg-success"></span>
-                                <!-- <i class="fa fa-futbol fa-3x text-success"></i> -->
-                                <i class="fa fa-regular-alt fa-palette fa-3x  text-success"></i>
+                                <div class="icon2"><i class="fas fa-compass"></i></div>
 
                                 <span class="bg-success"></span>
                             </div>
@@ -218,8 +231,7 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-warning">
                                 <span class="bg-warning"></span>
-                                <!-- <i class="fa fa-home fa-3x text-warning"></i> -->
-                                <i class="fa fa-regular-alt fa-palette fa-3x  text-warning"></i>
+                                <div class="icon3"><i class="fas fa-book"></i></div>
 
                                 <span class="bg-warning"></span>
                             </div>
@@ -235,8 +247,7 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <!-- <i class="fa fa-chalkboard-teacher fa-3x text-info"></i> -->
-                                <i class="fa  fa-map-marker-alt fa-3x  text-info"></i>
+                                <div class="icon4"><i class="fas fa-bullhorn"></i></div>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
@@ -261,27 +272,8 @@
                         <h1 class="mb-4">Literature Survey</h1>
                         <p>Attention Deficit Hyperactivity Disorder (ADHD) affects 2- 7 percent of children worldwide, leading to academic, social, and emotional challenges. Timely identification is crucial for effective treatment. However, in Sri Lanka, lack of awareness hinders therapy access. Existing solutions have gaps in iden- tifying ADHD [1]. Innovations are needed to bridge this gap and improve accessibility. ADHD’s global prevalence ranges from 5-10 percent in school-aged children. The disorder significantly impacts aca- demics, social interactions, and overall well-being [2]. Un- treated ADHD results in educational difficulties, low self- esteem, and relationship struggles. Traditional ADHD detection methods in Sri Lanka include activities like painting and puzzles, but these lack accuracy and reliability. Limited resources and tailored therapy hinder interventions. Machine learning shows promise in ADHD detection. Abbas et al. used eye-tracking and neural networks to achieve high accuracy. Game-based interventions offer effective ADHD assessment and treatment. They engage users, improve cognitive skills, and target specific symptoms [3] [4].
                         </p>
-                        <!-- <p class="mb-4">ADHD’s global prevalence ranges from 5-10 percent in school-aged children. The disorder significantly impacts aca- demics, social interactions, and overall well-being [2]. Un- treated ADHD results in educational difficulties, low self- esteem, and relationship struggles.</p> -->
-                        <!-- <p class="mb-4"> -->
-                            <!-- Traditional ADHD detection methods in Sri Lanka include activities like painting and puzzles, but these lack accuracy and reliability. Limited resources and tailored therapy hinder interventions. Machine learning shows promise in ADHD detection. Abbas et al. used eye-tracking and neural networks to achieve high accuracy. Game-based interventions offer effective ADHD assessment and treatment. They engage users, improve cognitive skills, and target specific symptoms [3] [4].</p> -->
                         <p class="mb-4">
                             Implementing a game-based mobile app for ADHD in Sri Lanka faces challenges like low awareness, resource scarcity, and technological barriers [5]. However, the prevalence of mobile devices presents an opportunity to raise awareness and enhance access. Such an app can be cost-effective, scalable, and user-friendly. In conclusion, early ADHD detection and treatment are crucial in Sri Lanka. Machine learning and game-based mobile apps hold promise to improve accuracy and accessibility. Future research should validate the app’s effectiveness, address cultural considerations, and ensure lasting benefits for children with ADHD.</p>
-                        <!-- <p class="mb-4">In conclusion, early ADHD detection and treatment are crucial in Sri Lanka. Machine learning and game-based mobile apps hold promise to improve accuracy and accessibility. Future research should validate the app’s effectiveness, address cultural considerations, and ensure lasting benefits for children with ADHD.</p> -->
-                        <!-- <div class="row g-4 align-items-center">
-                            <div class="col-sm-6">
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt=""
-                                        style="width: 45px; height: 45px;">
-                                    <div class="ms-3">
-                                        <h6 class="text-primary mb-1">Jhon Doe</h6>
-                                        <small>CEO & Founder</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <p>                    
                             <!-- Reference section -->
                             <hr>
@@ -328,7 +320,7 @@
                     <div class="container">
                         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                             <h1 class="mb-3">Research Gap</h1>
-                            <p>research gaps related to ADHD in Sri Lankan children aged between 6-12
+                            <p>Research gaps related to ADHD in Sri Lankan children aged between 6-12
                             </p>
                         </div>
                         <div class="container1">
