--- a/index.html
+++ b/index.html
@@ -119,32 +119,32 @@
                 <div class="navbar-nav mx-auto">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="classes.html" class="nav-item nav-link">Milstones</a>
+                    <a href="index.html" class="nav-item nav-link">Milstones</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Project Scope</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="facility.html" class="dropdown-item">Research Objectives</a>
-                            <a href="team.html" class="dropdown-item">Literature Survey</a>
-                            <a href="call-to-action.html" class="dropdown-item">Research Gap</a>
-                            <a href="appointment.html" class="dropdown-item">Research Problem & Solution</a>
-                            <a href="testimonial.html" class="dropdown-item">Methodology</a>
-                            <a href="404.html" class="dropdown-item">Technologies</a>
+                            <a href="index.html" class="dropdown-item">Research Objectives</a>
+                            <a href="index.html" class="dropdown-item">Literature Survey</a>
+                            <a href="index.html" class="dropdown-item">Research Gap</a>
+                            <a href="index.html" class="dropdown-item">Research Problem & Solution</a>
+                            <a href="index.html" class="dropdown-item">Methodology</a>
+                            <a href="index.html" class="dropdown-item">Technologies</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Downloads</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="facility.html" class="dropdown-item">Documents</a>
-                            <a href="team.html" class="dropdown-item">Presentations</a>
+                            <a href="index.html" class="dropdown-item">Documents</a>
+                            <a href="index.html" class="dropdown-item">Presentations</a>
 
                         </div>
                     </div>
 
 
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                    <!-- </div>
-                <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a>
-            </div> -->
+                    <a href="index.html" class="nav-item nav-link">Contact Us</a>
+                </div>
+                <!-- <a href="" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">Join Us<i class="fa fa-arrow-right ms-3"></i></a> -->
+            </div>
         </nav>
         <!-- Navbar End -->
 
@@ -284,41 +284,9 @@
                             Game-based interventions offer effective ADHD assessment and treatment. They engage users,
                             improve cognitive skills, and target specific symptoms [3] [4].
                         </p>
-<<<<<<< HEAD
                         <p class="mb-4">
                             Implementing a game-based mobile app for ADHD in Sri Lanka faces challenges like low awareness, resource scarcity, and technological barriers [5]. However, the prevalence of mobile devices presents an opportunity to raise awareness and enhance access. Such an app can be cost-effective, scalable, and user-friendly. In conclusion, early ADHD detection and treatment are crucial in Sri Lanka. Machine learning and game-based mobile apps hold promise to improve accuracy and accessibility. Future research should validate the app’s effectiveness, address cultural considerations, and ensure lasting benefits for children with ADHD.</p>
                         <p>                    
-=======
-                        <!-- <p class="mb-4">ADHD’s global prevalence ranges from 5-10 percent in school-aged children. The disorder significantly impacts aca- demics, social interactions, and overall well-being [2]. Un- treated ADHD results in educational difficulties, low self- esteem, and relationship struggles.</p> -->
-                        <!-- <p class="mb-4"> -->
-                        <!-- Traditional ADHD detection methods in Sri Lanka include activities like painting and puzzles, but these lack accuracy and reliability. Limited resources and tailored therapy hinder interventions. Machine learning shows promise in ADHD detection. Abbas et al. used eye-tracking and neural networks to achieve high accuracy. Game-based interventions offer effective ADHD assessment and treatment. They engage users, improve cognitive skills, and target specific symptoms [3] [4].</p> -->
-                        <p class="mb-4">
-                            Implementing a game-based mobile app for ADHD in Sri Lanka faces challenges like low
-                            awareness, resource scarcity, and technological barriers [5]. However, the prevalence of
-                            mobile devices presents an opportunity to raise awareness and enhance access. Such an app
-                            can be cost-effective, scalable, and user-friendly. In conclusion, early ADHD detection and
-                            treatment are crucial in Sri Lanka. Machine learning and game-based mobile apps hold promise
-                            to improve accuracy and accessibility. Future research should validate the app’s
-                            effectiveness, address cultural considerations, and ensure lasting benefits for children
-                            with ADHD.</p>
-                        <!-- <p class="mb-4">In conclusion, early ADHD detection and treatment are crucial in Sri Lanka. Machine learning and game-based mobile apps hold promise to improve accuracy and accessibility. Future research should validate the app’s effectiveness, address cultural considerations, and ensure lasting benefits for children with ADHD.</p> -->
-                        <!-- <div class="row g-4 align-items-center">
-                            <div class="col-sm-6">
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="">Read More</a>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt=""
-                                        style="width: 45px; height: 45px;">
-                                    <div class="ms-3">
-                                        <h6 class="text-primary mb-1">Jhon Doe</h6>
-                                        <small>CEO & Founder</small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                        <p>
->>>>>>> 0861d1946f6020197a4673321949c55e6f7f41a0
                             <!-- Reference section -->
                             <hr>
                             <text><b>References</b></text>
@@ -369,7 +337,6 @@
         </div>
         <!-- About End -->
 
-<<<<<<< HEAD
                 <!-- Three columns -->
                 <div class="container-xxl py-5">
                     <div class="container">
@@ -406,48 +373,6 @@
                             <div class="clearfix"></div>
                         </div>
                     </div>
-=======
-        <!-- Three columns -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Research Gap</h1>
-                    <p>research gaps related to ADHD in Sri Lankan children aged between 6-12
-                    </p>
->>>>>>> 0861d1946f6020197a4673321949c55e6f7f41a0
-                </div>
-                <div class="container1">
-                    <div class="column">
-                        <div class="title">
-                            <div class="icon"><i class="fas fa-globe"></i></div>
-                            Cultural Impacts on ADHD
-                        </div>
-                        <div class="description">Limited research exists on how cultural beliefs, family dynamics, and
-                            societal norms in Sri Lanka influence the recognition and handling of ADHD in children aged
-                            6-12.</div>
-                    </div>
-
-                    <div class="column">
-                        <div class="title">
-                            <div class="icon"><i class="fas fa-hospital"></i></div>
-                            Healthcare Access Challenges
-                        </div>
-                        <div class="description">Understanding the obstacles to accessing healthcare facilities and
-                            specialized ADHD resources in Sri Lanka is crucial, focusing on affordability, availability,
-                            and cultural acceptability.</div>
-                    </div>
-
-                    <div class="column">
-                        <div class="title">
-                            <div class="icon"><i class="fas fa-user-md"></i></div>
-                            Tailored Interventions Efficacy
-                        </div>
-                        <div class="description">Limited research exists on how well culturally adapted interventions
-                            work for managing ADHD in Sri Lankan children. Investigating their effectiveness is vital
-                            for better management.</div>
-                    </div>
-
-                    <div class="clearfix"></div>
                 </div>
             </div>
         </div>
